--- a/public/style/App.scss
+++ b/public/style/App.scss
@@ -1,5 +1,6 @@
 body {
   font-family: "Open Sans Condensed";
+  padding: 20px 60px;
 }
 .homepage {
   display: flex;
@@ -73,5 +74,52 @@ body {
       font-weight: lighter;
       font-size: 16px;
     }
+  }
+}
+.collection-item {
+  width: 22%;
+  display: flex;
+  flex-direction: column;
+  height: 350px;
+  align-items: center;
+
+  .image {
+    width: 100%;
+    height: 95%;
+    background-size: cover;
+    background-position: center;
+    margin-bottom: 5px;
+  }
+
+  .collection-footer {
+    width: 100%;
+    height: 5%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+
+    .name {
+      width: 90%;
+      margin-bottom: 15px;
+    }
+
+    .price {
+      width: 10%;
+    }
+  }
+}
+.collection-preview {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+
+  .title {
+    font-size: 28px;
+    margin-bottom: 25px;
+  }
+
+  .preview {
+    display: flex;
+    justify-content: space-between;
   }
 }
