--- a/public/style/App.scss
+++ b/public/style/App.scss
@@ -2,6 +2,10 @@ body {
   font-family: "Open Sans Condensed";
   padding: 20px 60px;
 }
+a{
+  text-decoration: none;
+  color: #000;
+}
 .homepage {
   display: flex;
   flex-direction: column;
@@ -121,5 +125,30 @@ body {
   .preview {
     display: flex;
     justify-content: space-between;
+  }
+}
+.header {
+  height: 70px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 25px;
+
+  .logo-container {
+    height: 100%;
+    width: 70px;
+    padding: 25px;
+  }
+
+  .options {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    .option {
+      padding: 10px 15px;
+    }
   }
 }
